@@ -15,6 +15,8 @@ scripts/selectall_xml.pl
 scripts/stag-autoddl.pl
 scripts/stag-autotemplate.pl
 scripts/stag-bulkload.pl
+scripts/stag-check-resources.pl
+scripts/stag-connect-parameters.pl
 scripts/stag-ir.pl
 scripts/stag-pgslurp.pl
 scripts/stag-qsh
@@ -58,4 +60,3 @@ t/data/parts-schema.sql
 t/data/relationship.chado-xml
 t/data/sofa.chado-xml
 t/data/test.chadoxml
-META.yml                                Module meta-data (added by MakeMaker)
